--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,8 @@ jobs:
           allowUpdates: true
           draft: false
           makeLatest: true
-          token: ${{ secrets.GITHUB_TOKEN }}
+          commit: main
+          # token: ${{ secrets.GITHUB_TOKEN }}
           name: ${{ steps.semver.outputs.next }}
+          tag: ${{ steps.semver.outputs.next }}
         if: ${{ steps.semver.outputs.next != '' }}
