--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -33,6 +33,7 @@ jobs:
       - name: Create tag
         uses: actions/github-script@v7.0.1
         with:
+          github-token: ${{ secrets.PAT }}
           script: |
             github.rest.git.createRef({
               owner: context.repo.owner,
