--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -31,14 +31,9 @@ jobs:
           noNewCommitBehavior: silent
 
       - name: Create tag
-        uses: actions/github-script@v7.0.1
-        with:
-          github-token: ${{ secrets.PAT }}
-          script: |
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: 'refs/tags/${{ steps.semver.outputs.next }}',
-              sha: context.sha
-            })
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "github-actions@users.noreply.github.com"
+          git tag ${{ steps.semver.outputs.next }}
+          git push origin ${{ steps.semver.outputs.next }}
         if: ${{ steps.semver.outputs.next != '' }}
