--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -37,3 +37,5 @@ jobs:
           git tag ${{ steps.semver.outputs.next }}
           git push origin ${{ steps.semver.outputs.next }}
         if: ${{ steps.semver.outputs.next != '' }}
+
+        # test
