feat(!): expand environment variable configuration and enhance logging
- Updated .env.example to include detailed descriptions for required and optional environment variables.
- Enhanced main.py with comprehensive docstrings for functions, improving code readability and maintainability.
- Introduced structured logging for better traceability of events during execution.
- Added validation for SQL identifiers and numeric parameters to ensure data integrity.

BREAKING CHANGES

Signed-off-by: Dmitrii Safronov <zimniy@cyberbrain.pw>

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,55 @@
-# PostgreSQL connection string
-DB_CONN=postgresql://user:password@localhost:5432/dbname
+# Required environment variables
+# Database connection string (PostgreSQL)
+# Example: postgresql://user:password@host:5432/dbname
+# Example with special characters: postgresql://user:"pass@word"@host:5432/dbname
+DB_CONN=postgresql://monitoring:monitoring123@postgres:5432/metrics
 
-# Table name to fetch data from
-TABLE_NAME=your_table_name
+# Name of the table to fetch data from
+# Must contain only alphanumeric characters and underscores
+TABLE_NAME=service_metrics
 
-# PushGateway URL with job name
-PUSHGATEWAY_URL=http://localhost:9091/metrics/job/db_data_pusher
+# URL of the PushGateway
+# Example: http://pushgateway:9091
+PUSHGATEWAY_URL=http://pushgateway:9091
+
+# Field names in the table
+# Must contain only alphanumeric characters and underscores
+ID_FIELD=service_id
+VALUE_FIELD=metric_value
+UPDATEDON_FIELD=updated_at
+
+# Optional environment variables with defaults
+# Name of the job (default: dbname_tablename)
+# Must contain only alphanumeric characters and underscores
+JOB_NAME=metrics_collector
+
+# Timeouts and retries
+# Database connection timeout in seconds (default: 5)
+DB_TIMEOUT=10
+# HTTP request timeout in seconds (default: 5)
+HTTP_TIMEOUT=5
+# Maximum number of retry attempts (default: 3)
+MAX_RETRIES=5
+# Base delay between retries in seconds (default: 1)
+RETRY_DELAY=2
+
+# Additional labels for metrics
+# Format: key1=value1,key2=value2
+# Example: environment=prod,region=eu-west
+# Values will be automatically escaped
+# Keys must contain only alphanumeric characters and underscores
+EXTRA_LABELS=environment=prod,region=eu-west
+
+# Generated metrics:
+# - db_connect_success: Whether the database connection was successful
+# - db_connection_duration_seconds: Time taken to connect to the database
+# - rows_count: Number of rows in the table
+# - value: Value from the table
+# - updatedon: Timestamp of the last update
+# - scrape_success: Whether the entire scrape was successful
+# - skipped_rows: Number of skipped rows
+# - scrape_duration_seconds: Duration of the scrape in seconds
+#
+# All metrics have labels: job, db, table
+# Value metrics have additional label: id
+# All metrics can have additional labels from EXTRA_LABELS
