refactor: update environment variable structure and improve database configuration
- Renamed and reorganized environment variables in `.env.example` for clarity, including changes to database and PushGateway settings.
- Updated the main function to reflect the new variable names and structure, enhancing readability and maintainability.
- Consolidated table-related configurations under a unified naming scheme, improving consistency in the codebase.

Signed-off-by: Dmitrii Safronov <zimniy@cyberbrain.pw>

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,17 @@
-# Database connection settings
+# Database configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=mydb
-DB_USER=myuser
-DB_PASS=mypassword
+DB_USER=postgres
+DB_PASS=postgres
+DB_TIMEOUT=5
+DB_TABLE=mytable
+DB_TABLE_COLUMN_ID=id
+DB_TABLE_COLUMN_VALUE=value
+DB_TABLE_COLUMN_UPDATEDON=updatedon
 
-# Table settings
-TABLE_NAME=mytable
-ID_COLUMN=id
-VALUE_COLUMN=value
-UPDATEDON_COLUMN=updatedon
-
-# Prometheus PushGateway settings
+# PushGateway configuration
 PUSHGATEWAY_URL=http://localhost:9091
-INSTANCE=myinstance
+PUSHGATEWAY_TIMEOUT=10
+PUSHGATEWAY_JOB=mydb_mytable
+PUSHGATEWAY_INSTANCE=mydb_mytable
